--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,16 +1,3 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 
 .footer {
   display: flex;
@@ -61,8 +48,8 @@
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  /* font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace; */
 }
 
 .grid {
@@ -74,6 +61,10 @@
 }
 
 .card {
+  min-width: 300px;
+  max-width: 300px;
+  min-height: 150px;
+  min-height: 150px;
   margin: 1rem;
   padding: 1.5rem;
   text-align: left;
@@ -82,7 +73,6 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
 }
 
 .card:hover,
